samples/_failures_safe/1761406117_ca4737_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f05062f.c: In function ‘main’:
./samples/SAFE/__tmp_3f05062f.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_3f05062f.c:139:9: error: expected declaration or statement at end of input
